--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
       <button id="goBackButton" style="display: none;">Go Back to start</button>
     </div>
   </div>
-  <script type="module" src="js/index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
